--- a/css/style.css
+++ b/css/style.css
@@ -298,3 +298,56 @@ footer{
     padding: 30px 0 ;
     font-size: 2.5rem;
 }
+
+/*-------------RESPONSIVE------------*/
+
+
+@media screen and (max-width: 620px){
+    .container.header{
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        height: auto;
+    }
+    .container.header nav{
+        width: 100%;
+        text-align: center;
+    }
+    .container.header ul{
+        display: block;
+    }
+    .container.header li{
+        margin: 1rem 0;
+    }
+
+    .container.contacto .contacto-div img{
+        display: none;
+    }
+}
+
+@media screen and (max-width:480px){
+    .container.footer .socialmedia a{
+        padding: 0 7px;
+    }
+    .container.footer .socialmedia i{
+        font-size: 18px;
+    }
+}
+
+@media screen and (max-width:320px){
+    .copyright{
+        font-size: 12px;
+    }
+
+    .container.conocimiento img{
+        width: 150px;
+        height: 150px;
+    }
+
+    .container.footer .socialmedia a{
+        padding: 0 2px;
+    }
+    .container.footer .socialmedia i{
+        font-size: 1rem;
+    }
+}
