--- a/portafolio/huddle/css/style.css
+++ b/portafolio/huddle/css/style.css
@@ -80,16 +80,12 @@ header{
 
 .footer-section div{
     margin: 0 10px;
-    border-radius:30px;
-    border: white solid 2px;
-    padding: 10px 15px;
 }
 
 footer i{
     color: white;
     font-size: 20px;
 }
-
 
 @media screen and (max-width: 1024px){
     .imagen-main img{
@@ -102,19 +98,97 @@ footer i{
 }
 
 @media screen and (max-width: 768px){
+    header{
+        height: 120px;
+    }
+
+
+    .logotipo{
+        width: 150px;
+        margin-top: 20px;
+        margin-left: 50px;
+    }
+
+
+    .imagen-main{
+        margin-right: 25px;
+    }
+
     .imagen-main img{
         width: 400px;
     }
     
     .article-div{
-        width: 300px;
+        width: 320px;
+    }
+    .article-div p{
+        font-size: 20px;
+    }
+    .section-main .boton a{
+        padding: 10px 60px;
+    }
+    .footer-section{
+        margin-right: 70px;
+        margin-top: 20px;
     }
 }
 
 @media screen and (max-width: 480px){
-    
+
+    body{
+        background-image: url("../images/bg-mobile.svg");
+    }
+
+    .logotipo{
+        width: 140px;
+
+    }
+    .section-main{
+        flex-wrap: wrap;
+        
+    }
+
+    .imagen-main{
+        margin-right: 0;
+    }
+
+    .imagen-main img{
+        width: 330px;
+    }
+
+    .article-div{
+       text-align: center;
+    }
+
+    .section-main .boton{
+        margin: 40px 0px 60px 0px;
+    }
+
+    .footer-section{
+        justify-content: center;
+        margin-right: 0px;
+        margin-top: 10px;
+    }
+
+    .footer-section div{
+        margin: 0 8px;
+
+    }
 }
 
 @media screen and (max-width: 320px){
-    
+    .imagen-main img{
+        width: 300px;
+    }
+
+    .article-div{
+        width: 300px;
+     }
+
+     .logotipo{
+        width: 120px;
+        margin-top: 20px;
+        margin-left: 30px;
+
+    }
 }
