dos cursos agregados si

--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,7 @@ nav ul li a{
     margin-top: 20px;
     margin-bottom: 20px;
 }
-.conociminto-div{
+.conocimiento-div{
     width: 500px;
     text-align: center;
     margin: 20px 0;
